# Features
option('tests', type: 'feature', description: 'Build tests')

# Variables
option('metric-hysteresis', type: 'integer', value: 1, description: 'The metric hysteresis.',)
option('monitor-collection-interval', type: 'integer', value: 1, description: 'The health monitor collection interval in seconds.',)
