option('tests', type: 'feature', description: 'Build tests')

# Variables
option(
    'monitor-collection-interval',
    type: 'integer',
    value: 1,
    description: 'The health monitor collection interval in seconds.',
)

option(
    'use-average-value',
    type: 'feature',
    value: 'disabled',
    description: 'Update the metric with average value.',
)
